# sitemap-url-parser

./: pyproject.toml
.github/workflows/: python-publish.yml
Sitemaps/New Parser/: wendys.csv
