[tool.poetry]
name = "sitemap-url-parser"
version = "0.1.0"
description = ""
authors = ["Satyam Singh <stmsng2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
xmltodict = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
